chores: fix variable name
